horizontal scroll fixed

--- a/css/main.css
+++ b/css/main.css
@@ -426,6 +426,7 @@ textarea {
     height: 50px;
     border-radius: 5px;
     border-style: none;
+    box-sizing: border-box;
     padding: 0px 10px;
 }
 
@@ -433,7 +434,7 @@ div#fields select{    height: 50px;
     border-radius: 5px;
     padding: 10px;
     outline: none;
-    width: 104% !important;}
+    width: 100% !important;}
 
 div#fields button {
     width: 100% !important;
